--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,176 @@
-* {
+.product-list-container {
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 20px;
+	background-color: #f5f5f5;
+	border: 1px solid #ddd;
+  }
+  
+  .product-list {
+	display: flex;
+	flex-wrap: wrap;
+	margin: -10px;
+  }
+  
+  .product-item {
+	flex: 0 0 calc(33.33% - 20px);
+	margin: 10px;
+	padding: 20px;
+	background-color: #fff;
+	border: 1px solid #ddd;
+  }
+  
+  .product-item img {
+	max-width: 100%;
+  }
+  
+  .product-item h3 {
+	margin-top: 0;
+	font-size: 1.2rem;
+  }
+  
+  .product-item p {
+	margin-bottom: 0;
+  }
+  
+  .product-price {
+	display: block;
+	margin-top: 10px;
+	font-size: 1.2rem;
+	font-weight: bold;
+  }
+  
+  .add-to-cart {
+	display: block;
+	margin-top: 10px;
+	padding: 10px 20px;
+	background-color: #333;
+	color: #fff;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+  }
+  
+  .add-to-cart:hover {
+	background-color: #555;
+  }
+  
+  .pagination {
+	margin-top: 20px;
+	text-align: center;
+  }
+  
+  .pagination a {
+	display: inline-block;
+	padding: 10px;
+	background-color: #f5f5f5;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	margin-right: 10px;
+	color: #333;
+	text-decoration: none;
+  }
+  
+  .pagination a:hover {
+	background-color: #ddd;
+  }
+  
+.cart-container {
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 20px;
+	background-color: #f5f5f5;
+	border: 1px solid #ddd;
+  }
+  
+  table {
+	width: 100%;
+	border-collapse: collapse;
+  }
+  
+  th,
+  td {
+	padding: 10px;
+	text-align: left;
+	border-bottom: 1px solid #ddd;
+  }
+  
+  thead th {
+	background-color: #333;
+	color: #fff;
+  }
+  
+  tfoot td {
+	font-weight: bold;
+  }
+  
+  input[type="number"] {
+	width: 50px;
+	text-align: center;
+  }
+  
+  button {
+	display: block;
+	margin-top: 20px;
+	padding: 10px 20px;
+	background-color: #333;
+	color: #fff;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+  }
+  
+  button:hover {
+	background-color: #555;
+  }
+  
+
+*, ::before, ::after{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
+body {
+	background: blue;
+	font-family: 'Berkshire Swash', sans-serif;
+}
+
+.container {
+  width: 1280px;
+  height: 720px;
+  overflow: hidden;
+  position: relative;
+  margin: 200px auto;	
+  border-radius: 20px;
+  box-shadow: 5px 8px 12px black;
+
+}
+.container img {
+  width: 100%;
+  height: 100%;
+}
+
+.container p {
+	font-size: 2.6rem;
+	color: rgb(255, 255, 255);
+	position:absolute;
+	top: 20%;
+	left: 20%;
+	transform: translate(-20%, -20%);
+	text-shadow: 0 0 8 rgb(1, 2, 0);
+}
+*
+ {
+	margin: 10px;
+	padding: 10px;
+	box-sizing: border-box;
+}
+
+html {
+	scroll-behavior: smooth;
+
+}
 a {
 	text-decoration: none;
 	outline: none;
@@ -23,7 +190,9 @@ body {
 /* * ============================== */
 
 .navbar {
-	background: #FFCD48;
+	background: #0e0bc2;
+	position: sticky;
+	top: 0;
 }
 
 .navbar a {
@@ -32,7 +201,7 @@ body {
 	padding: 20px;
 	width: 100%;
 	text-align: center;
-	color: #000;
+	color: #ffffff;
 	transition: .3s ease-out all;
 }
 
@@ -102,6 +271,8 @@ aside {
 	background: #1D2F3D;
 	padding: 20px;
 	border-radius: 3px;
+	position: sticky;
+	top: 20px;
 }
 
 aside .titulo {
@@ -121,8 +292,10 @@ aside .indice a {
 /* * ============================== */
 /* * ========== FOOTER ============ */
 /* * ============================== */
-
-
+footer .navbar {
+	position: sticky;
+	bottom: 0;
+}
 
 /* * ============================== */
 /* * ====== MEDIA QUERIES ========= */
@@ -145,5 +318,10 @@ aside .indice a {
 
 	main .contenedor {
 		flex-direction: column;
+	}
+
+	aside {
+		position: static;
+		margin: 40px 0 0 0;
 	}
 }
