--- a/estilos.css
+++ b/estilos.css
@@ -325,3 +325,16 @@ footer .navbar {
 		margin: 40px 0 0 0;
 	}
 }
+/CENTRAR COSAS/
+      .centrado{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+.mensaje-vacio {
+	display: none;
+  }
+  
+  .cart-container table:empty + .mensaje-vacio {
+	display: block;
+  }
