--- a/estilos.css
+++ b/estilos.css
@@ -119,6 +119,16 @@
 	border-radius: 4px;
 	cursor: pointer;
   }
+  .bottom-bar {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 2px;
+	background-color: #333;
+	transform: scaleX(0);
+	transform-origin: left;
+	transition: transform 0.3s ease-out;
+  }
   
   button:hover {
 	background-color: #555;
